# @EUGO_CHANGE: @begin: Replaced setuptools with meson-python build backend.
# Upstream uses setuptools + Cython to build _cyobservability.so by bundling
# ~150+ C/C++ files from src/core/ and third_party/. Our Meson build links
# against system-installed libgrpc instead and only compiles the 7 observability-
# specific C++ files + the Cython bridge.

# IMPORTANT: i have not tested this....just started it

[build-system]
requires = [
    "meson-python>=0.17",
    "meson>=1.3.0",
    "cython>=3.0",
    "cmake",
]
build-backend = "mesonpy"

[project]
name = "grpcio-observability"
license = "Apache-2.0"
description = "gRPC Python observability package"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.12"
authors = [{name = "The gRPC Authors", email = "grpc-io@googlegroups.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
# Version is extracted from grpc_version.py by meson.build
dynamic = ["version"]

# Runtime dependencies — mirrored from setup.py install_requires.
# grpcio version must match (pinned to same version).
# opentelemetry-api is needed by the pure-Python observability plugin code.
# NOTE: upstream also requires setuptools>=77.0.1 at runtime (for pkg_resources
# or similar). We omit it — modern Python doesn't need it at runtime.
dependencies = [
    "grpcio==1.79.0.dev0",
    "opentelemetry-api>=1.21.0",
]

[project.urls]
Homepage = "https://grpc.io"
"Source Code" = "https://github.com/grpc/grpc/tree/master/src/python/grpcio_observability"
"Bug Tracker" = "https://github.com/grpc/grpc/issues"
Documentation = "https://grpc.github.io/grpc/python/grpc_observability.html"
# @EUGO_CHANGE: @end
