[build-system]
build-backend = 'mesonpy'
requires = [
    'meson_python>=0.17.1',
    'meson>=1.8.0',
    'cmake>=3.18',
    'cython>=3.0.11',
]


[project]
name = 'grpcio_tools'
readme = 'README.rst'
requires-python = '>=3.12'
dynamic = ["version"]
authors = [
    {name = "Eugo, Inc."},
]

dependencies = [
    "protobuf>=6.31.1,<7.0.0",
    "grpcio"
]